--- a/Shoe-web/Mens.html
+++ b/Shoe-web/Mens.html
@@ -97,7 +97,7 @@
             <button id="searchButton" class="search-button">Search</button>
         </div>
         <div class="shoe-img-container">
-            <a href="/Payment method.html">
+            <a href="/Shoe-web/Payment method.html">
                 <img src="/Shoe images\Leather 2.jpeg" alt="Leather Shoes" class="shoe-img">
                 <div class="overlay">
                     <h3>Leather Shoes</h3>
@@ -107,7 +107,7 @@
         </div>
         <!-- Add more shoe images and overlays here -->
         <div class="shoe-img-container">
-            <a href="/Payment method.html">
+            <a href="/Shoe-web/Payment method.html">
                 <img src="/Shoe images\Leather1.jpeg" alt="Leather Shoes" class="shoe-img">
                 <div class="overlay">
                     <h3>Leather Shoes</h3>
@@ -116,7 +116,7 @@
             </a>
         </div>
         <div class="shoe-img-container">
-            <a href="/Shoe-web/Payment method.html">
+            <a href="/Shoe-web/Shoe-web/Payment method.html">
                 <img src="/Shoe images/NIKE.jpeg" alt="Nike Shoes" class="shoe-img">
                 <div class="overlay">
                     <h3>Nike Shoes</h3>
@@ -125,7 +125,7 @@
             </a>
         </div>
         <div class="shoe-img-container">
-            <a href="/Shoe-web/Payment method.html">
+            <a href="/Shoe-web/Shoe-web/Payment method.html">
                 <img src="/Shoe images/Campus shoes.jpeg" alt="Campus Shoes" class="shoe-img">
                 <div class="overlay">
                     <h3>Campus Shoes</h3>
