--- a/Shoe-web/Shoe-tec girls.html
+++ b/Shoe-web/Shoe-tec girls.html
@@ -93,7 +93,7 @@
         </div>
         <div class="button-container">
             <button onclick="window.location.href='/Shoe-web/Mens.html'" class="button">Mesh sneakers</button>
-            <button onclick="window.location.href='/Shoe-web/Ladies shoes.html'" class="button">School shoes</button>
+            <button onclick="window.location.href='/Shoe-web/ladies-shoes.html'" class="button">School shoes</button>
         </div>
     </div>
 </body>
