--- a/Shoe-web/shoes.html
+++ b/Shoe-web/shoes.html
@@ -100,8 +100,8 @@
         </main>
         <div class="buttons">
             <button onclick="window.location.href='c:/Users/USER/OneDrive/Desktop/Shoes app/Mens.html'" class="button">Men</button>
-            <button onclick="window.location.href='c:/Users/USER/OneDrive/Desktop/Shoes app/Ladies shoes.html'" class="button">Ladies</button>
-            <button onclick="window.location.href='c:/Users/USER/OneDrive/Desktop/Shoes app/Kids collection.html'" class="button">KIds</button>
+            <button onclick="window.location.href='c:/Users/USER/OneDrive/Desktop/Shoes app/ladies-shoes.html'" class="button">Ladies</button>
+            <button onclick="window.location.href='c:/Users/USER/OneDrive/Desktop/Shoes app/kids-collection.html'" class="button">KIds</button>
         </div>
     </div>
     <footer>
