i capitalized the s in the shoe web folder

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
         </main>
         <div class="buttons">
             <button onclick="window.location.href='/Shoe-web/Mens.html'" class="button">Men</button>
-            <button onclick="window.location.href='/shoe-web/ladies-shoes.html'" class="button">Ladies</button>
-            <button onclick="window.location.href='/shoe-web/kids-collection.html'" class="button">KIds</button>
+            <button onclick="window.location.href='/Shoe-web/ladies-shoes.html'" class="button">Ladies</button>
+            <button onclick="window.location.href='/Shoe-web/kids-collection.html'" class="button">KIds</button>
         </div>
     </div>
     <footer>
