Enhanced good coding practices

--- a/Shoe-web/Shoe-tec boys.html
+++ b/Shoe-web/Shoe-tec boys.html
@@ -124,7 +124,7 @@
             </a>
         </div>
         <div class="button-container">
-            <button onclick="window.location.href='/Shoe-web/MESH Sneakers.html'" class="button">Mesh sneakers</button>
+            <button onclick="window.location.href='/Shoe-web/mesh-sneakers.html'" class="button">Mesh sneakers</button>
             <button onclick="window.location.href='/Shoe-web/boys school shoes.html'" class="button">School shoes</button>
         </div>
     </div>
