--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             padding: 0;
             background-color: #f0f0f0;
             position: relative;
-            padding-bottom: 70px; /* Adjusted padding for the footer and space for buttons */
+            padding-bottom: 70px; /* Adjusted padding for the footer and space for buttonsfcfcgcgfggfcfcg */
         }
         header {
             background-color: #333;
