--- a/index.html
+++ b/index.html
@@ -107,5 +107,8 @@
     <footer>
         <p>&copy; 2024 Comrade-Shoes. All rights reserved.</p>
     </footer>
+    <script>
+        alert("welcome back!");
+    </script>
 </body>
 </html>
