--- a/index.html
+++ b/index.html
@@ -108,7 +108,6 @@
         <p>&copy; 2024 Comrade-Shoes. All rights reserved.</p>
     </footer>
     <script>
-        alert("welcome back!");
-    </script>
+        alert("welcome back!"); </script>
 </body>
 </html>
