trying to update js

--- a/index.html
+++ b/index.html
@@ -106,8 +106,7 @@
     </div>
     <footer>
         <p>&copy; 2024 Comrade-Shoes. All rights reserved.</p>
-    </footer>
-    <script>
-        alert("welcome back!"); </script>
+    </footer>   
 </body>
+<script>alert("welcome back!"); </script>
 </html>
