--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
     </style>
 </head>
 <body>
+    <script>
+        alert("welcome back!");
+         </script>
     <header>
         <h1>Comrade-Shoes: Hero's Shoe Trading Platform</h1>
     </header>
@@ -108,5 +111,5 @@
         <p>&copy; 2024 Comrade-Shoes. All rights reserved.</p>
     </footer>   
 </body>
-<script>alert("welcome back!"); </script>
+
 </html>
