--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </main>
         <div class="buttons">
             <button onclick="window.location.href='Shoe-web/signup_webpage.html'" class="button">Men</button>
-            <button onclick="window.location.href='/Shoe-web/ladies-shoes.html'" class="button">Ladies</button>
+            <button onclick="window.location.href='/Shoe-web/login_webpage.html'" class="button">Ladies</button>
             <button onclick="window.location.href='/Shoe-web/kids-collection.html'" class="button">KIds</button>
         </div>
     </div>
