--- a/Shoe-web/index.html
+++ b/Shoe-web/index.html
@@ -101,7 +101,7 @@ h1 {
             <p class="info">Discover a community passionate about sneakers.</p>
         </div>
         <div class="image-container">
-            <img src="shoes.jpg" alt="Shoes" class="shoes-image">
+            <img src="'Kids/boys shoes/Mesh sneakers/breathable kids sneakers black.jpeg'" alt="Shoes" class="shoes-image">
         </div>
     </div>
 </body>
