--- a/Index.html
+++ b/Index.html
@@ -102,9 +102,9 @@
             <img src="/Shoe images/Shoe collection.webp" alt="Shoes">
         </main>
         <div class="buttons">
-            <button onclick="window.location.href='Shoe-web/Mens.html'" class="button">Men</button>
-            <button onclick="window.location.href='Shoe-web/ladies-shoes.html'" class="button">Ladies</button>
-            <button onclick="window.location.href='Shoe-web/kids-collection.html'" class="button">KIds</button>
+            <button onclick="window.location.href='/Shoe-web/Mens.html'" class="button">Men</button>
+            <button onclick="window.location.href='/Shoe-web/ladies-shoes.html'" class="button">Ladies</button>
+            <button onclick="window.location.href='/Shoe-web/kids-collection.html'" class="button">KIds</button>
         </div>
     </div>
     <footer>
