adjusted js to cache

--- a/Index.html
+++ b/Index.html
@@ -90,9 +90,7 @@
     </style>
 </head>
 <body>
-    <script>
-        alert("welcome back!");
-         </script>
+    <script>welcome.js</script>
     <header>
         <h1>Comrade-Shoes: Hero's Shoe Trading Platform</h1>
     </header>
