--- a/Shoe-web/signup_webpage.html
+++ b/Shoe-web/signup_webpage.html
@@ -7,78 +7,77 @@
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f2f2f2;
-}
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f2f2f2;
+        }
 
-.container {
-    background-color: #fff;
-    padding: 30px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    max-width: 400px;
-    width: 100%;
-}
+        .container {
+            background-color: #fff;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            max-width: 400px;
+            width: 100%;
+        }
 
-h2 {
-    margin-bottom: 20px;
-    color: #333;
-}
+        h2 {
+            margin-bottom: 20px;
+            color: #333;
+        }
 
-.input-group {
-    margin-bottom: 20px;
-    text-align: left;
-}
+        .input-group {
+            margin-bottom: 20px;
+            text-align: left;
+        }
 
-input[type="text"],
-input[type="email"],
-input[type="password"] {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-sizing: border-box;
-}
+        input[type="text"],
+        input[type="email"],
+        input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            box-sizing: border-box;
+        }
 
-button {
-    width: 100%;
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
+        button {
+            width: 100%;
+            background-color: #4CAF50;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
 
-button:hover {
-    background-color: #45a049;
-}
+        button:hover {
+            background-color: #45a049;
+        }
 
-.login {
-    margin-top: 20px;
-}
+        .login {
+            margin-top: 20px;
+        }
 
-.login a {
-    color: #4CAF50;
-}
+        .login a {
+            color: #4CAF50;
+        }
 
-.login a:hover {
-    color: #45a049;
-}
-
+        .login a:hover {
+            color: #45a049;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <form id="signupForm" action="#" method="POST" onsubmit="return validateForm()">
+        <form id="signupForm" onsubmit="return validateForm()">
             <h2>Create an Account</h2>
             <div class="input-group">
                 <input type="text" id="username" name="username" placeholder="Username" required>
@@ -91,10 +90,8 @@ button:hover {
             </div>
             <button type="submit">Sign Up</button>
             <p class="login">Already have an account? <a href="login_webpage.html">Log in here</a></p>
-            <!-- New button for Sign In -->
         </form>
     </div>
-    <script src="shoe_script.js"></script>
     <script src="signup_database.js"></script>
 </body>
 </html>
