--- a/Shoe-web/Mens.html
+++ b/Shoe-web/Mens.html
@@ -116,8 +116,8 @@
             </a>
         </div>
         <div class="shoe-img-container">
-            <a href="/Shoe-web/Shoe-web/Payment method.html">
-                <img src="/Shoe images/NIKE.jpeg" alt="Nike Shoes" class="shoe-img">
+            <a href="/Shoe-web/Payment method.html">
+                <img src="/Shoe images\NIKE.jpeg" alt="Nike Shoes" class="shoe-img">
                 <div class="overlay">
                     <h3>Nike Shoes</h3>
                     <p>Price: $129</p>
@@ -125,7 +125,7 @@
             </a>
         </div>
         <div class="shoe-img-container">
-            <a href="/Shoe-web/Shoe-web/Payment method.html">
+            <a href="/Shoe-web/Payment method.html">
                 <img src="/Shoe images/Campus shoes.jpeg" alt="Campus Shoes" class="shoe-img">
                 <div class="overlay">
                     <h3>Campus Shoes</h3>
