--- a/Shoe-web/signup_webpage.html
+++ b/Shoe-web/signup_webpage.html
@@ -73,6 +73,11 @@
         .login a:hover {
             color: #45a049;
         }
+
+        .error-message {
+            color: #f44336;
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
@@ -89,6 +94,7 @@
                 <input type="password" id="password" name="password" placeholder="Password" required>
             </div>
             <button type="submit">Sign Up</button>
+            <p id="errorMessage" class="error-message"></p>
             <p class="login">Already have an account? <a href="login_webpage.html">Log in here</a></p>
         </form>
     </div>
