--- a/Shoe-web/home.html
+++ b/Shoe-web/home.html
@@ -105,6 +105,7 @@
             <button onclick="window.location.href='/Shoe-web/kids-collection.html'" class="button">KIds</button>
         </div>
     </div>
+    <p class="login">Delete account? <a href="delete_account.html">Log in here</a></p>
     <footer>
         <p>&copy; 2024 Comrade-Shoes. All rights reserved.</p>
     </footer>   
