--- a/Shoe-web/reset_password.html
+++ b/Shoe-web/reset_password.html
@@ -37,7 +37,9 @@
             text-align: left;
         }
 
-        input[type="password"] {
+        input[type="email"],
+        input[type="password"],
+        input[type="text"] {
             width: 100%;
             padding: 10px;
             border: 1px solid #ccc;
@@ -73,8 +75,21 @@
 </head>
 <body>
     <div class="container">
-        <form id="resetPasswordForm" onsubmit="return resetPassword()">
+        <form id="requestCodeForm" onsubmit="return requestVerificationCode()">
+            <h2>Request Verification Code</h2>
+            <div class="input-group">
+                <input type="email" id="email" name="email" placeholder="Enter your email" required>
+            </div>
+            <button type="submit">Send Code</button>
+            <p id="message" class="message"></p>
+            <p id="errorMessage" class="error-message"></p>
+        </form>
+
+        <form id="resetPasswordForm" onsubmit="return verifyCode()">
             <h2>Reset Password</h2>
+            <div class="input-group">
+                <input type="text" id="verificationCode" name="verificationCode" placeholder="Enter verification code" required>
+            </div>
             <div class="input-group">
                 <input type="password" id="newPassword" name="newPassword" placeholder="Enter new password" required>
             </div>
@@ -84,6 +99,11 @@
         </form>
     </div>
 
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script>
+        emailjs.init("Bla0HL_-PPPnwjOx_");  // Replace with your EmailJS user ID
+    </script>
     <script src="reset_password.js" defer></script>
+    <script src="signup_database.js"></script>
 </body>
 </html>
