Made it possible to delete account

--- a/Shoe-web/reset_password.html
+++ b/Shoe-web/reset_password.html
@@ -3,107 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reset Password</title>
-    <link rel="stylesheet" href="styles.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f2f2f2;
-        }
-
-        .container {
-            background-color: #fff;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            max-width: 400px;
-            width: 100%;
-        }
-
-        h2 {
-            margin-bottom: 20px;
-            color: #333;
-        }
-
-        .input-group {
-            margin-bottom: 20px;
-            text-align: left;
-        }
-
-        input[type="email"],
-        input[type="password"],
-        input[type="text"] {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            box-sizing: border-box;
-        }
-
-        button {
-            width: 100%;
-            background-color: #4CAF50;
-            color: white;
-            padding: 14px 20px;
-            margin: 8px 0;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #45a049;
-        }
-
-        .message {
-            color: #333;
-            margin-top: 20px;
-        }
-
-        .error-message {
-            color: #f44336;
-            margin-top: 10px;
-        }
-    </style>
+    <title>Security Questions</title>
+    <script src="security_questions.js"></script>
 </head>
 <body>
-    <div class="container">
-        <form id="requestCodeForm" onsubmit="return requestVerificationCode()">
-            <h2>Request Verification Code</h2>
-            <div class="input-group">
-                <input type="email" id="email" name="email" placeholder="Enter your email" required>
-            </div>
-            <button type="submit">Send Code</button>
-            <p id="message" class="message"></p>
-            <p id="errorMessage" class="error-message"></p>
-        </form>
+    <h1>Security Questions</h1>
+    <form onsubmit="return answerSecurityQuestions()">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" required><br><br>
 
-        <form id="resetPasswordForm" onsubmit="return verifyCode()">
-            <h2>Reset Password</h2>
-            <div class="input-group">
-                <input type="text" id="verificationCode" name="verificationCode" placeholder="Enter verification code" required>
-            </div>
-            <div class="input-group">
-                <input type="password" id="newPassword" name="newPassword" placeholder="Enter new password" required>
-            </div>
-            <button type="submit">Reset Password</button>
-            <p id="message" class="message"></p>
-            <p id="errorMessage" class="error-message"></p>
-        </form>
-    </div>
+        <label for="securityQuestion1">Security Question 1:</label>
+        <input type="text" id="securityQuestion1" name="securityQuestion1" required><br><br>
 
-    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-    <script>
-        emailjs.init("Bla0HL_-PPPnwjOx_");  // Replace with your EmailJS user ID
-    </script>
-    <script src="reset_password.js" defer></script>
-    <script src="signup_database.js"></script>
+        <label for="securityQuestion2">Security Question 2:</label>
+        <input type="text" id="securityQuestion2" name="securityQuestion2" required><br><br>
+
+        <button type="submit">Answer Security Questions</button>
+    </form>
+    <p id="errorMessage" style="color: red;"></p>
 </body>
 </html>
