--- a/Shoe-web/forgot_password.html
+++ b/Shoe-web/forgot_password.html
@@ -3,87 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forgot Password</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Security Questions</title>
+    <script src="security_questions.js"></script>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f2f2f2;
-        }
+    font-family: Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+}
 
-        .container {
-            background-color: #fff;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            max-width: 400px;
-            width: 100%;
-        }
+.container {
+    text-align: center;
+    margin-top: 50px;
+}
 
-        h2 {
-            margin-bottom: 20px;
-            color: #333;
-        }
+button {
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    cursor: pointer;
+    margin-top: 20px;
+}
 
-        .input-group {
-            margin-bottom: 20px;
-            text-align: left;
-        }
+button:hover {
+    background-color: #0056b3;
+}
 
-        input[type="email"] {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            box-sizing: border-box;
-        }
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+}
 
-        button {
-            width: 100%;
-            background-color: #4CAF50;
-            color: white;
-            padding: 14px 20px;
-            margin: 8px 0;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 30%;
+    text-align: center;
+}
 
-        button:hover {
-            background-color: #45a049;
-        }
+.close {
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
 
-        .message {
-            color: #333;
-            margin-top: 20px;
-        }
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
 
-        .error-message {
-            color: #f44336;
-            margin-top: 10px;
-        }
     </style>
 </head>
 <body>
-    <div class="container">
-        <form id="forgotPasswordForm" onsubmit="return sendResetCode()">
-            <h2>Forgot Password</h2>
-            <div class="input-group">
-                <input type="email" id="email" name="email" placeholder="Enter your email" required>
-            </div>
-            <button type="submit">Send Verification Code</button>
-            <p id="message" class="message"></p>
-            <p id="errorMessage" class="error-message"></p>
-        </form>
-    </div>
+    <h1>Security Questions</h1>
+    <form onsubmit="return answerSecurityQuestions()">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" required><br><br>
 
-    <script src="forgot_password.js" defer></script>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required><br><br>
+
+        <button type="submit">Answer Security Questions</button>
+    </form>
+    <p id="errorMessage" style="color: red;"></p>
 </body>
 </html>
