--- a/Shoe-web/home.html
+++ b/Shoe-web/home.html
@@ -97,6 +97,8 @@
     <div class="container">
         <main>
             <marquee behavior="scroll" direction="left"><h1> 😎Hero-tec Shoe trading platform NAIROBI-KENYA👌</h1></marquee>
+            <button onclick="delete_myaccount()">Delete Account</button>
+
             <img src="/Shoe images/Shoe collection.webp" alt="Shoes">
         </main>
         <div class="buttons">
@@ -105,7 +107,7 @@
             <button onclick="window.location.href='/Shoe-web/kids-collection.html'" class="button">KIds</button>
         </div>
     </div>
-    <p class="login">Delete account? <a href="delete_account.html">Log in here</a></p>
+    <p class="login">Delete account? <a href="delete_myaccount.html">Log in here</a></p>
     <footer>
         <p>&copy; 2024 Comrade-Shoes. All rights reserved.</p>
     </footer>   
