--- a/Shoe-web/reset_password.html
+++ b/Shoe-web/reset_password.html
@@ -3,22 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Security Questions</title>
-    <script src="security_questions.js"></script>
+    <title>Reset Password</title>
+    <script src="reset_password.js"></script>
 </head>
 <body>
-    <h1>Security Questions</h1>
-    <form onsubmit="return answerSecurityQuestions()">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required><br><br>
+    <h1>Reset Password</h1>
+    <form onsubmit="return resetPassword()">
+        <input type="hidden" id="email" name="email" value="">
+        <input type="hidden" id="token" name="token" value="">
+        
+        <label for="newPassword">New Password:</label>
+        <input type="password" id="newPassword" name="newPassword" required><br><br>
 
-        <label for="securityQuestion1">Security Question 1:</label>
-        <input type="text" id="securityQuestion1" name="securityQuestion1" required><br><br>
-
-        <label for="securityQuestion2">Security Question 2:</label>
-        <input type="text" id="securityQuestion2" name="securityQuestion2" required><br><br>
-
-        <button type="submit">Answer Security Questions</button>
+        <button type="submit">Reset Password</button>
     </form>
     <p id="errorMessage" style="color: red;"></p>
 </body>
