--- a/Shoe-web/forgot_password.html
+++ b/Shoe-web/forgot_password.html
@@ -7,80 +7,146 @@
     <script src="security_questions.js"></script>
     <style>
         body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-}
+            font-family: 'Arial', sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background: linear-gradient(135deg, #6B73FF 10%, #000DFF 100%);
+            margin: 0;
+            color: #333;
+        }
 
-.container {
-    text-align: center;
-    margin-top: 50px;
-}
+        .container {
+            background: #fff;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            max-width: 400px;
+            width: 100%;
+        }
 
-button {
-    padding: 10px 20px;
-    font-size: 16px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    cursor: pointer;
-    margin-top: 20px;
-}
+        h1 {
+            margin-bottom: 20px;
+            font-size: 24px;
+            color: #444;
+        }
 
-button:hover {
-    background-color: #0056b3;
-}
+        label {
+            display: block;
+            margin-bottom: 8px;
+            font-weight: bold;
+        }
 
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.4);
-}
+        input[type="text"],
+        input[type="email"] {
+            width: calc(100% - 20px);
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
 
-.modal-content {
-    background-color: #fefefe;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 30%;
-    text-align: center;
-}
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
 
-.close {
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-    cursor: pointer;
-}
+        button:hover {
+            background-color: #0056b3;
+        }
 
-.close:hover,
-.close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-}
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.4);
+            justify-content: center;
+            align-items: center;
+        }
 
+        .modal-content {
+            background-color: #fefefe;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            max-width: 500px;
+            text-align: center;
+        }
+
+        .close {
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: #000;
+            text-decoration: none;
+        }
+
+        #errorMessage {
+            color: red;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
-    <h1>Security Questions</h1>
-    <form onsubmit="return answerSecurityQuestions()">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required><br><br>
+    <div class="container">
+        <h1>Security Questions</h1>
+        <form onsubmit="return answerSecurityQuestions()">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required><br><br>
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required><br><br>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required><br><br>
 
-        <button type="submit">Answer Security Questions</button>
-    </form>
-    <p id="errorMessage" style="color: red;"></p>
+            <button type="submit">Answer Security Questions</button>
+        </form>
+        <p id="errorMessage"></p>
+    </div>
+
+    <!-- Modal -->
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <h2>Answer Security Questions</h2>
+            <!-- Security questions content here -->
+        </div>
+    </div>
+
+    <script>
+        //function answerSecurityQuestions() {
+            // Example JavaScript function
+            // Implement the security questions validation logic here
+           // document.getElementById('errorMessage').textContent = 'This is a placeholder for an error message.';
+            //return false; // Prevent form submission for demo purposes
+        //}
+
+        //function closeModal() {
+        //    document.getElementById('myModal').style.display = 'none';
+        //}
+
+        // Open modal for demo purposes
+        //document.querySelector('button').addEventListener('click', function(event) {
+          //  event.preventDefault();
+            //document.getElementById('myModal').style.display = 'flex';
+       // });
+    </script>
 </body>
 </html>
