--- a/Shoe-web/forgot_password.html
+++ b/Shoe-web/forgot_password.html
@@ -19,49 +19,71 @@
 
         .container {
             background: #fff;
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            padding: 40px;
+            border-radius: 12px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
             text-align: center;
             max-width: 400px;
             width: 100%;
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
+
+        .container:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
         }
 
         h1 {
-            margin-bottom: 20px;
-            font-size: 24px;
+            margin-bottom: 30px;
+            font-size: 28px;
             color: #444;
+            transition: color 0.3s;
+        }
+
+        h1:hover {
+            color: #000DFF;
         }
 
         label {
             display: block;
-            margin-bottom: 8px;
+            margin-bottom: 10px;
             font-weight: bold;
         }
 
         input[type="text"],
         input[type="email"] {
             width: calc(100% - 20px);
-            padding: 10px;
+            padding: 12px 10px;
             margin-bottom: 20px;
             border: 1px solid #ddd;
-            border-radius: 4px;
+            border-radius: 8px;
             box-sizing: border-box;
+            font-size: 16px;
+            transition: border-color 0.3s, box-shadow 0.3s;
+        }
+
+        input[type="text"]:focus,
+        input[type="email"]:focus {
+            border-color: #007bff;
+            box-shadow: 0 0 8px rgba(0, 123, 255, 0.25);
+            outline: none;
         }
 
         button {
-            padding: 10px 20px;
-            font-size: 16px;
+            padding: 12px 30px;
+            font-size: 18px;
             background-color: #007bff;
             color: white;
             border: none;
-            border-radius: 4px;
+            border-radius: 8px;
             cursor: pointer;
-            transition: background-color 0.3s;
+            transition: background-color 0.3s, box-shadow 0.3s;
+            box-shadow: 0 4px 8px rgba(0, 123, 255, 0.2);
         }
 
         button:hover {
             background-color: #0056b3;
+            box-shadow: 0 6px 12px rgba(0, 123, 255, 0.3);
         }
 
         .modal {
@@ -72,16 +94,16 @@
             top: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.4);
+            background-color: rgba(0, 0, 0, 0.5);
             justify-content: center;
             align-items: center;
         }
 
         .modal-content {
-            background-color: #fefefe;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            background-color: #fff;
+            padding: 30px;
+            border-radius: 12px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
             width: 100%;
             max-width: 500px;
             text-align: center;
@@ -92,11 +114,12 @@
             font-size: 28px;
             font-weight: bold;
             cursor: pointer;
+            transition: color 0.3s;
         }
 
         .close:hover,
         .close:focus {
-            color: #000;
+            color: #000DFF;
             text-decoration: none;
         }
 
@@ -111,10 +134,10 @@
         <h1>Security Questions</h1>
         <form onsubmit="return answerSecurityQuestions()">
             <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required><br><br>
+            <input type="text" id="username" name="username" required>
 
             <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required><br><br>
+            <input type="email" id="email" name="email" required>
 
             <button type="submit">Answer Security Questions</button>
         </form>
@@ -129,24 +152,5 @@
             <!-- Security questions content here -->
         </div>
     </div>
-
-    <script>
-        //function answerSecurityQuestions() {
-            // Example JavaScript function
-            // Implement the security questions validation logic here
-           // document.getElementById('errorMessage').textContent = 'This is a placeholder for an error message.';
-            //return false; // Prevent form submission for demo purposes
-        //}
-
-        //function closeModal() {
-        //    document.getElementById('myModal').style.display = 'none';
-        //}
-
-        // Open modal for demo purposes
-        //document.querySelector('button').addEventListener('click', function(event) {
-          //  event.preventDefault();
-            //document.getElementById('myModal').style.display = 'flex';
-       // });
-    </script>
 </body>
 </html>
