--- a/Shoe-web/about.html
+++ b/Shoe-web/about.html
@@ -198,7 +198,7 @@
         <section class="team">
             <div class="team-member">
                 <img src="/Shoe-web/David..jpg" alt="Team Member 1">
-                <h3>John Doe</h3>
+                <h3>David kiamba</h3>
                 <p>Founder & CEO</p>
             </div>
             <div class="team-member">
