--- a/Shoe-web/about.html
+++ b/Shoe-web/about.html
@@ -150,7 +150,7 @@
         <h1>About Us - Comrade-Shoes</h1>
     </header>
     <nav>
-        <a href="index.html">Home</a>
+        <a href="home.html">Home</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
     </nav>
