BACKGROUND IMAGES AND NEW DESIGNS

--- a/Shoe-web/Mens.html
+++ b/Shoe-web/Mens.html
@@ -6,65 +6,100 @@
     <title>Mens Shoes</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f2f2f2; /* Light gray background */
+            background-color: #f4f4f4;
+            color: #333;
+            line-height: 1.6;
+            position: relative;
         }
+
+        .background-image {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-size: cover;
+            background-position: center;
+            z-index: -1; /* Ensure the background image is behind everything */
+            animation: changeBackground 20s infinite;
+        }
+
+        @keyframes changeBackground {
+            0% { background-image: url('https://source.unsplash.com/random/1600x900'); }
+            25% { background-image: url('https://source.unsplash.com/collection/190727/1600x900'); }
+            50% { background-image: url('https://source.unsplash.com/collection/190726/1600x900'); }
+            75% { background-image: url('https://source.unsplash.com/collection/190725/1600x900'); }
+            100% { background-image: url('https://source.unsplash.com/collection/190724/1600x900'); }
+        }
+
         h1 {
-            background-color: black;
-            color: white;
+            background-color: #1e1e1e;
+            color: #fff;
             text-align: center;
             padding: 20px;
-            margin-top: 0; /* Remove default margin */
-            border-bottom: 2px solid #ffcc00; /* Yellow border */
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Shadow effect */
+            margin-top: 0;
+            border-bottom: 2px solid #ff8a00;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
-    
         .container {
-            max-width: 1000px;
-            margin: 50px auto;
-            text-align: center;
-            background-color: gold; /* Container background color */
-            border-radius: 10px; /* Container border radius */
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Container shadow */
+            max-width: 1200px;
+            margin: 20px auto;
             padding: 20px;
+            background-color: rgba(255, 255, 255, 0.8);
+            border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
             display: flex;
-            justify-content: center;
-            align-items: center;
             flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            position: relative;
+            z-index: 1; /* Ensure content is above the background image */
         }
         .shoe-img-container {
             position: relative;
+            width: 300px;
             margin: 10px;
             cursor: pointer;
+            transition: transform 0.3s ease;
+            border-radius: 10px;
+            overflow: hidden;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        .shoe-img-container:hover {
+            transform: translateY(-5px);
         }
         .shoe-img {
-            width: 300px;
-            border-radius: 10px; /* Rounded corners */
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Shadow effect */
-            transition: transform 0.3s ease; /* Smooth transition */
-        }
-        .shoe-img:hover {
-            transform: scale(1.05); /* Zoom effect on hover */
+            width: 100%;
+            display: block;
+            border-radius: 10px 10px 0 0;
         }
         .overlay {
             position: absolute;
-            bottom: 5px;
-            left: 50%;
-            transform: translateX(-50%);
+            bottom: 0;
+            left: 0;
+            width: 100%;
             background-color: rgba(0, 0, 0, 0.7);
-            padding: 3px 10px;
-            border-radius: 5px; /* Reduced roundness */
+            padding: 10px;
+            box-sizing: border-box;
+            transition: opacity 0.3s ease;
+            opacity: 0;
+        }
+        .shoe-img-container:hover .overlay {
+            opacity: 1;
         }
         .overlay h3, .overlay p {
             margin: 0;
-            color: white;
-            font-size: 12px;
+            color: #fff;
+            font-size: 1.2em;
+            text-align: center;
         }
         .search-container {
             width: 100%;
             margin-bottom: 20px;
+            text-align: center;
         }
         .search-input {
             width: 60%;
@@ -76,8 +111,8 @@
         }
         .search-button {
             padding: 10px 20px;
-            background-color: #4CAF50; /* Green background color */
-            color: white;
+            background-color: #4caf50;
+            color: #fff;
             border: none;
             border-radius: 8px;
             cursor: pointer;
@@ -85,11 +120,26 @@
             font-size: 16px;
         }
         .search-button:hover {
-            background-color: #45a049; /* Darker green on hover */
+            background-color: #388e3c;
+        }
+
+        @media (max-width: 768px) {
+            .container {
+                padding: 10px;
+            }
+            .shoe-img-container {
+                width: calc(50% - 20px);
+            }
+        }
+        @media (max-width: 480px) {
+            .shoe-img-container {
+                width: 100%;
+            }
         }
     </style>
 </head>
 <body>
+    <div class="background-image"></div>
     <h1>Mens Shoes</h1>
     <div class="container">
         <div class="search-container">
@@ -98,17 +148,16 @@
         </div>
         <div class="shoe-img-container">
             <a href="/Shoe-web/Payment method.html">
-                <img src="/Shoe images\Leather 2.jpeg" alt="Leather Shoes" class="shoe-img">
+                <img src="/Shoe images/Leather 2.jpeg" alt="Leather Shoes" class="shoe-img">
                 <div class="overlay">
                     <h3>Leather Shoes</h3>
                     <p>Price: $99</p>
                 </div>
             </a>
         </div>
-        <!-- Add more shoe images and overlays here -->
         <div class="shoe-img-container">
             <a href="/Shoe-web/Payment method.html">
-                <img src="/Shoe images\Leather1.jpeg" alt="Leather Shoes" class="shoe-img">
+                <img src="/Shoe images/Leather1.jpeg" alt="Leather Shoes" class="shoe-img">
                 <div class="overlay">
                     <h3>Leather Shoes</h3>
                     <p>Price: $89</p>
@@ -117,7 +166,7 @@
         </div>
         <div class="shoe-img-container">
             <a href="/Shoe-web/Payment method.html">
-                <img src="/Shoe images\NIKE.jpeg" alt="Nike Shoes" class="shoe-img">
+                <img src="/Shoe images/NIKE.jpeg" alt="Nike Shoes" class="shoe-img">
                 <div class="overlay">
                     <h3>Nike Shoes</h3>
                     <p>Price: $129</p>
@@ -135,11 +184,7 @@
         </div>
     </div>
     <script>
-        // JavaScript for search functionality
-        document.getElementById("searchButton").addEventListener("click", function() {
-            filterShoes();
-        });
-
+        document.getElementById("searchButton").addEventListener("click", filterShoes);
         document.getElementById("searchInput").addEventListener("keyup", function(event) {
             if (event.key === "Enter") {
                 filterShoes();
