--- a/Shoe-web/contact.html
+++ b/Shoe-web/contact.html
@@ -48,6 +48,21 @@
             background-color: #fff;
             border-radius: 10px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            position: relative;
+            overflow: hidden;
+        }
+        .container::before {
+            content: "";
+            background-image: url('Shoe-web/mileview-img3.jpg');
+            background-size: cover;
+            background-position: center;
+            opacity: 0.1;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            z-index: -1;
         }
 
         /* Contact Section */
@@ -61,17 +76,20 @@
             font-size: 3em;
             margin-bottom: 20px;
             color: #333;
+            animation: fadeIn 1s ease-in-out;
         }
         .contact-section p {
             font-size: 1.2em;
             line-height: 1.6;
             margin-bottom: 40px;
             color: #666;
+            animation: fadeIn 1.5s ease-in-out;
         }
         .contact-form {
             max-width: 600px;
             margin: 0 auto;
             text-align: left;
+            animation: fadeIn 2s ease-in-out;
         }
         .contact-form label {
             display: block;
@@ -85,6 +103,7 @@
             font-size: 1em;
             border: 1px solid #ccc;
             border-radius: 5px;
+            background-color: rgba(255, 255, 255, 0.9);
         }
         .contact-form textarea {
             resize: vertical;
@@ -122,6 +141,12 @@
             margin-top: 30px;
             border-radius: 0 0 10px 10px;
         }
+
+        /* Keyframes for animations */
+        @keyframes fadeIn {
+            0% { opacity: 0; }
+            100% { opacity: 1; }
+        }
     </style>
 </head>
 <body>
@@ -129,7 +154,7 @@
         <h1>Contact Us - Comrade-Shoes</h1>
     </header>
     <nav>
-        <a href="index.html">Home</a>
+        <a href="home.html">Home</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
     </nav>
@@ -137,7 +162,7 @@
         <section class="contact-section">
             <h2>Get in Touch</h2>
             <p>Have questions? We're here to help. Send us a message and we'll get back to you as soon as possible.</p>
-            <form class="contact-form" action="submit_contact_form.php" method="POST">
+            <form class="contact-form" id="contact-form">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
                 
@@ -154,5 +179,21 @@
     <footer>
         <p>&copy; 2024 Comrade-Shoes. All rights reserved.</p>
     </footer>
+
+    <script type="text/javascript">
+        document.getElementById('contact-form').addEventListener('submit', function(event) {
+            event.preventDefault();
+            
+            const name = document.getElementById('name').value;
+            const email = document.getElementById('email').value;
+            const message = document.getElementById('message').value;
+
+            // Construct the URL to open WhatsApp chat
+            const whatsappUrl = `https://wa.me/+254778512359?text=${encodeURIComponent('Name: ' + name + '\nEmail: ' + email + '\nMessage: ' + message)}`;
+
+            // Open the WhatsApp URL
+            window.open(whatsappUrl, '_blank');
+        });
+    </script>
 </body>
 </html>
