--- a/Shoe-web/ladies-shoes.html
+++ b/Shoe-web/ladies-shoes.html
@@ -10,22 +10,27 @@
             margin: 0;
             padding: 0;
             background-color: #f2f2f2; /* Light gray background */
+            background-image: url('https://source.unsplash.com/random/1600x900');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed; /* Fixed background */
         }
-        h1 {
+        .header {
             background-color: black;
             color: white;
             text-align: center;
             padding: 20px;
-            margin-top: 0; /* Remove default margin */
             border-bottom: 2px solid #ffcc00; /* Yellow border */
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Shadow effect */
         }
-    
+        h1 {
+            margin-top: 0; /* Remove default margin */
+        }
         .container {
             max-width: 1000px;
-            margin: 50px auto;
+            margin: 20px auto;
             text-align: center;
-            background-color: gold; /* Container background color */
+            background-color: rgba(255, 255, 255, 0.8); /* Container background color */
             border-radius: 10px; /* Container border radius */
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Container shadow */
             padding: 20px;
@@ -65,6 +70,11 @@
         .search-container {
             width: 100%;
             margin-bottom: 20px;
+            padding: 10px;
+            background-color: rgba(255, 255, 255, 0.9); /* Light background */
+            border: 2px solid black; /* Black border */
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Shadow effect */
         }
         .search-input {
             width: 60%;
@@ -90,7 +100,9 @@
     </style>
 </head>
 <body>
-    <h1>Ladies Shoes</h1>
+    <div class="header">
+        <h1>Ladies Shoes</h1>
+    </div>
     <div class="container">
         <div class="search-container">
             <input type="text" id="searchInput" class="search-input" placeholder="Search...">
@@ -160,8 +172,19 @@
                 }
             });
         }
+
+        // JavaScript for changing background image every 10 seconds
+        var backgroundImages = [
+            'https://source.unsplash.com/random/1600x900',
+            'https://source.unsplash.com/collection/190727/1600x900',
+            'https://source.unsplash.com/1600x900/?fashion'
+        ];
+        var currentIndex = 0;
+        var bgImage = document.body.style;
+        setInterval(function() {
+            currentIndex = (currentIndex + 1) % backgroundImages.length;
+            bgImage.backgroundImage = 'url("' + backgroundImages[currentIndex] + '")';
+        }, 10000); // Change every 10 seconds
     </script>
 </body>
-</html>
-
 </html>
