--- a/Shoe-web/mesh-sneakers.html
+++ b/Shoe-web/mesh-sneakers.html
@@ -3,174 +3,224 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mesh sneakers</title>
+    <title>Mesh Sneakers</title>
     <style>
+        /* General Styles */
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f2f2f2; /* Light gray background */
+            background-color: #f7f7f7;
+            color: #333;
+            background-image: url('https://source.unsplash.com/random/1600x900'); /* Background image */
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
         }
         h1 {
-            background-color: black;
-            color: white;
+            background-color: #333;
+            color: #fff;
             text-align: center;
             padding: 20px;
-            margin-top: 0; /* Remove default margin */
-            border-bottom: 2px solid #ffcc00; /* Yellow border */
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Shadow effect */
+            margin-top: 0;
+            border-bottom: 2px solid #ffcc00;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
     
         .container {
-            max-width: 1000px;
-            margin: 50px auto;
-            text-align: center;
-            background-color: gold; /* Container background color */
-            border-radius: 10px; /* Container border radius */
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Container shadow */
+            max-width: 1200px;
+            margin: 20px auto;
             padding: 20px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-wrap: wrap;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            background-color: rgba(255, 255, 255, 0.8); /* Background color with transparency */
+            border-radius: 10px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
         }
 
+        /* Search Section */
         .search-container {
-            width: 100%;
+            text-align: center;
             margin-bottom: 20px;
+            padding: 20px;
+            background-color: #333;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
         .search-input {
             width: 60%;
-            padding: 10px;
+            padding: 12px;
             border: none;
-            border-radius: 8px;
-            margin-right: 10px;
+            border-top-left-radius: 25px;
+            border-bottom-left-radius: 25px;
+            margin-right: 0;
             font-size: 16px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            outline: none;
         }
         .search-button {
-            padding: 10px 20px;
-            background-color: #4CAF50; /* Green background color */
-            color: white;
+            padding: 12px 20px;
+            background-color: #ffcc00;
+            color: #333;
             border: none;
-            border-radius: 8px;
+            border-top-right-radius: 25px;
+            border-bottom-right-radius: 25px;
             cursor: pointer;
             transition: background-color 0.3s ease;
             font-size: 16px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            outline: none;
         }
         .search-button:hover {
-            background-color: #45a049; /* Darker green on hover */
+            background-color: #ffdb4d;
         }
 
+        /* Shoe Image Container */
         .shoe-img-container {
             position: relative;
-            margin: 10px;
-            cursor: pointer;
+            overflow: hidden;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            background-color: #fff;
+            transition: transform 0.3s ease;
+        }
+        .shoe-img-container:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
         }
         .shoe-img {
-            width: 300px;
-            border-radius: 10px; /* Rounded corners */
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Shadow effect */
-            transition: transform 0.3s ease; /* Smooth transition */
+            width: 100%;
+            height: auto;
+            border-radius: 10px 10px 0 0;
+            transition: transform 0.3s ease;
         }
-        .shoe-img:hover {
-            transform: scale(1.05); /* Zoom effect on hover */
+        .shoe-img-container:hover .shoe-img {
+            transform: scale(1.05);
         }
         .overlay {
             position: absolute;
-            bottom: 5px;
-            left: 50%;
-            transform: translateX(-50%);
-            background-color: rgba(0, 0, 0, 0.7);
-            padding: 3px 10px;
-            border-radius: 5px; /* Reduced roundness */
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            background: linear-gradient(to top, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0) 100%);
+            color: #fff;
+            padding: 10px;
+            text-align: center;
+            transition: opacity 0.3s ease;
+            opacity: 0;
+        }
+        .shoe-img-container:hover .overlay {
+            opacity: 1;
         }
         .overlay h3, .overlay p {
-            margin: 0;
-            color: white;
-            font-size: 12px;
+            margin: 5px 0;
+        }
+
+        /* Footer Styles */
+        .footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
         }
     </style>
 </head>
 <body>
-    <h1>Mesh sneakers</h1>
+    <h1>Mesh Sneakers</h1>
+    <div class="search-container">
+        <input type="text" id="searchInput" class="search-input" placeholder="Search...">
+        <button id="searchButton" class="search-button">Search</button>
+    </div>
+
     <div class="container">
-        <div class="search-container">
-            <input type="text" id="searchInput" class="search-input" placeholder="Search...">
-            <button id="searchButton" class="search-button">Search</button>
-        </div>
+        <!-- Shoe Image Containers -->
         <div class="shoe-img-container">
             <a href="/Shoe-web/Payment method.html">
-                <img src="/Kids/boys shoes/Stelatoes.jpeg" alt="Mesh sneakers" class="shoe-img">
+                <img src="/Kids/boys shoes/Stelatoes.jpeg" alt="Stelatoes" class="shoe-img">
                 <div class="overlay">
                     <h3>Stelatoes</h3>
                     <p>Sh 999</p>
                 </div>
             </a>
         </div>
+
         <div class="shoe-img-container">
             <a href="/Shoe-web/Payment method.html">
-                <img src="/Kids/boys shoes/Mesh sneakers/babys sports wear.jpeg" alt="Baby Shoes" class="shoe-img">
+                <img src="/Kids/boys shoes/Mesh sneakers/babys sports wear.jpeg" alt="Baby Sports Wear" class="shoe-img">
                 <div class="overlay">
-                    <h3>black baby sport Shoes</h3>
+                    <h3>Black Baby Sports Wear</h3>
                     <p>Sh 499</p>
                 </div>
             </a>
         </div>
-        <!-- Add more shoe images and overlays here -->
+
         <div class="shoe-img-container">
             <a href="/Shoe-web/Payment method.html">
-                <img src="/Kids/boys shoes/Mesh sneakers/Kids air force white-grey.jpeg" alt="air force Shoes" class="shoe-img">
+                <img src="/Kids/boys shoes/Mesh sneakers/Kids air force white-grey.jpeg" alt="Kids Air Force" class="shoe-img">
                 <div class="overlay">
-                    <h3>kids air force white-grey</h3>
+                    <h3>Kids Air Force White-Grey</h3>
                     <p>Sh 1599</p>
                 </div>
             </a>
         </div>
+
         <div class="shoe-img-container">
             <a href="/Shoe-web/Payment method.html">
-                <img src="/Kids/boys shoes/Mesh sneakers/Causal comfy sports.jpeg" class="shoe-img">
+                <img src="/Kids/boys shoes/Mesh sneakers/Causal comfy sports.jpeg" alt="Causal Comfy Sports" class="shoe-img">
                 <div class="overlay">
-                    <h3>Casual comfy sports</h3>
+                    <h3>Casual Comfy Sports</h3>
                     <p>Sh 1019</p>
                 </div>
             </a>
         </div>
+
         <div class="shoe-img-container">
             <a href="/Shoe-web/Payment method.html">
-                <img src="/Kids/boys shoes/Mesh sneakers/breathable kids sneakers black.jpeg" alt="Mesh sneakers" class="shoe-img">
+                <img src="/Kids/boys shoes/Mesh sneakers/breathable kids sneakers black.jpeg" alt="Breathable Kids Sneakers Black" class="shoe-img">
                 <div class="overlay">
-                    <h3>breathable kids sneakers black</h3>
+                    <h3>Breathable Kids Sneakers Black</h3>
                     <p>Sh 799</p>
                 </div>
             </a>
         </div>
+
         <div class="shoe-img-container">
             <a href="/Shoe-web/Payment method.html">
-                <img src="/Kids/girls shoes/Non-slip sneakers.png" alt="Baby Shoes" class="shoe-img">
+                <img src="/Kids/girls shoes/Non-slip sneakers.png" alt="Non-slip Sneakers" class="shoe-img">
                 <div class="overlay">
-                    <h3>Non-slip sneakers Shoes</h3>
+                    <h3>Non-slip Sneakers</h3>
                     <p>Sh 499</p>
                 </div>
             </a>
         </div>
+
         <div class="shoe-img-container">
             <a href="/Shoe-web/Payment method.html">
-                <img src="/Kids/girls shoes/2X sport shoes.jpeg" alt="air force Shoes" class="shoe-img">
+                <img src="/Kids/girls shoes/2X sport shoes.jpeg" alt="2X Sport Shoes" class="shoe-img">
                 <div class="overlay">
-                    <h3>2X sport shoes</h3>
+                    <h3>2X Sport Shoes</h3>
                     <p>Sh 1599</p>
                 </div>
             </a>
         </div>
+
         <div class="shoe-img-container">
             <a href="/Shoe-web/Payment method.html">
-                <img src="/Kids/girls shoes/Toddler sports wear.jpeg" alt="air force Shoes" class="shoe-img">
+                <img src="/Kids/girls shoes/Toddler sports wear.jpeg" alt="Toddler Sports Wear" class="shoe-img">
                 <div class="overlay">
-                    <h3>Toddler sports wear</h3>
+                    <h3>Toddler Sports Wear</h3>
                     <p>Sh 1599</p>
                 </div>
             </a>
         </div>
+    </div>
+
+    <div class="footer">
+        <p>© 2024 Mesh Sneakers. All rights reserved.</p>
     </div>
 
     <script>
@@ -184,7 +234,6 @@
                 filterShoes();
             }
         });
-
         function filterShoes() {
             var input = document.getElementById("searchInput").value.toLowerCase();
             var shoes = document.querySelectorAll(".shoe-img-container");
