--- a/Shoe-web/about.html
+++ b/Shoe-web/about.html
@@ -202,8 +202,8 @@
                 <p>Founder & CEO</p>
             </div>
             <div class="team-member">
-                <img src="team2.jpg" alt="Team Member 2">
-                <h3>Jane Smith</h3>
+                <img src="/Shoe-web/Natalie.B.jpg" alt="Team Member 2">
+                <h3>Natalie Blessing</h3>
                 <p>Chief Marketing Officer</p>
             </div>
             <div class="team-member">
@@ -233,7 +233,7 @@
         }
 
         // Change background image every 5 seconds
-        setInterval(changeBackground, 5000);
+        setInterval(changeBackground, 10000);
 
         // Initial background image load
         changeBackground();
