--- a/home.html
+++ b/home.html
@@ -133,13 +133,6 @@
             header h1 {
                 font-size: 2em;
             }
-            nav {
-                flex-direction: column;
-            }
-            nav a {
-                margin: 10px 0;
-                font-size: 1em;
-            }
             .hero h2 {
                 font-size: 2em;
             }
@@ -159,9 +152,13 @@
             header h1 {
                 font-size: 1.5em;
             }
+            nav {
+                flex-direction: column;
+                padding: 10px;
+            }
             nav a {
-                font-size: 0.9em;
                 margin: 5px 0;
+                font-size: 1em;
             }
             .hero h2 {
                 font-size: 1.5em;
