--- a/home.html
+++ b/home.html
@@ -140,7 +140,7 @@
                 font-size: 1em;
             }
             .sections {
-                flex-direction: column;
+                flex-direction: row;
                 align-items: center;
             }
             .section {
