--- a/home.html
+++ b/home.html
@@ -173,7 +173,7 @@
         <h1>Comrade-Shoes</h1>
     </header>
     <nav>
-        <a href="/Shoe-web/home.html">Home</a>
+        <a href="home.html">Home</a>
         <a href="/Shoe-web/about.html">About</a>
         <a href="/Shoe-web/contact.html">Contact</a>
     </nav>
