Responsiveness and ensuring codes work well

--- a/login_webpage.html
+++ b/login_webpage.html
@@ -79,7 +79,7 @@
             </div>
             <button type="submit">Login</button>
             <p id="errorMessage" class="error-message"></p>
-            <p class="login">Forgot Password? <a href="/Shoe-web/forgot_password.html">Forgot Password?</a></p>
+            <p class="login">Forgot Password? <a href="forgot_password.html">Forgot Password?</a></p>
         </form>
     </div>
 
