--- a/about.html
+++ b/about.html
@@ -209,7 +209,7 @@
             <div class="team-member">
                 <img src="/Shoe-web/meshack.jpg" alt="Team Member 3">
                 <h3>Meshack Odondi</h3>
-                <p>Head of Design</p>
+                <p>Senior Security analyst</p>
             </div>
         </section>
     </div>
